tests/snapshots/lexer__keywords__and.snap
---
source: tests/lexer.rs
expression: "lex(\"and\")"
---
Ok(
    [
        Token {
            kind: And,
            span: Span {
                start: 0,
                end: 3,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 3,
                end: 3,
            },
        },
    ],
)
