tests/snapshots/lexer__keywords__break_kw.snap
---
source: tests/lexer.rs
expression: "lex(\"break\")"
---
Ok(
    [
        Token {
            kind: Break,
            span: Span {
                start: 0,
                end: 5,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 5,
                end: 5,
            },
        },
    ],
)
