tests/snapshots/lexer__keywords__const_.snap
---
source: tests/lexer.rs
expression: "lex(\"const\")"
---
Ok(
    [
        Token {
            kind: Const,
            span: Span {
                start: 0,
                end: 5,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 5,
                end: 5,
            },
        },
    ],
)
