tests/snapshots/lexer__keywords__continue_kw.snap
---
source: tests/lexer.rs
expression: "lex(\"continue\")"
---
Ok(
    [
        Token {
            kind: Continue,
            span: Span {
                start: 0,
                end: 8,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 8,
                end: 8,
            },
        },
    ],
)
