tests/snapshots/lexer__keywords__fn_.snap
---
source: tests/lexer.rs
expression: "lex(\"fn\")"
---
Ok(
    [
        Token {
            kind: Fn,
            span: Span {
                start: 0,
                end: 2,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 2,
                end: 2,
            },
        },
    ],
)
