tests/snapshots/lexer__keywords__for_.snap
---
source: tests/lexer.rs
expression: "lex(\"for\")"
---
Ok(
    [
        Token {
            kind: For,
            span: Span {
                start: 0,
                end: 3,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 3,
                end: 3,
            },
        },
    ],
)
