tests/snapshots/lexer__keywords__in_.snap
---
source: tests/lexer.rs
expression: "lex(\"in\")"
---
Ok(
    [
        Token {
            kind: In,
            span: Span {
                start: 0,
                end: 2,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 2,
                end: 2,
            },
        },
    ],
)
