tests/snapshots/lexer__keywords__not.snap
---
source: tests/lexer.rs
expression: "lex(\"not\")"
---
Ok(
    [
        Token {
            kind: Not,
            span: Span {
                start: 0,
                end: 3,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 3,
                end: 3,
            },
        },
    ],
)
