tests/snapshots/lexer__keywords__not_x.snap
---
source: tests/lexer.rs
expression: "lex(\"not x\")"
---
Ok(
    [
        Token {
            kind: Not,
            span: Span {
                start: 0,
                end: 3,
            },
        },
        Token {
            kind: Identifier(
                "x",
            ),
            span: Span {
                start: 4,
                end: 5,
            },
        },
        Token {
            kind: Eof,
            span: Span {
                start: 5,
                end: 5,
            },
        },
    ],
)
